--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Oculus/WebXR • Per-Eye Blur + 3 Modes • v8</title>
+<title>Oculus/WebXR • Per-Eye Saturation + 3 Modes • v9</title>
 
 <script type="importmap">
 {
@@ -17,16 +17,16 @@
 <style>
   html,body{margin:0;height:100%;overflow:hidden;background:#000;font-family:system-ui,-apple-system,Segoe UI,Roboto,"Noto Sans KR",sans-serif}
   #hud{position:fixed;left:16px;top:16px;z-index:20;background:rgba(0,0,0,.85);color:#fff;
-       border:1px solid rgba(255,255,255,.15);border-radius:12px;padding:12px;min-width:360px;backdrop-filter:blur(4px)}
+       border:1px solid rgba(255,255,255,.15);border-radius:12px;padding:12px;min-width:380px;backdrop-filter:blur(4px)}
   #hud h3{margin:0 0 8px;color:#82d0ff;font-size:15px}
   .row{display:flex;align-items:center;gap:8px;margin:6px 0;flex-wrap:wrap}
   label{font-size:12px;white-space:nowrap}
-  input[type=range]{width:170px}
+  input[type=range]{width:190px}
   .pill{display:inline-block;padding:2px 8px;border-radius:999px;background:rgba(255,255,255,.1);font-size:12px}
   button{appearance:none;border:0;border-radius:8px;padding:6px 10px;color:#fff;background:#3a86ff;cursor:pointer}
   button.ghost{background:#555}
-  #dbg{position:fixed;left:16px;top:180px;color:#b3e5c1;z-index:19;font:12px/1.5 ui-monospace,Menlo,Consolas,monospace;
-       background:rgba(0,0,0,.45);padding:8px 10px;border-radius:8px;min-width:360px}
+  #dbg{position:fixed;left:16px;top:200px;color:#b3e5c1;z-index:19;font:12px/1.5 ui-monospace,Menlo,Consolas,monospace;
+       background:rgba(0,0,0,.45);padding:8px 10px;border-radius:8px;min-width:380px}
   #seedCanvas{position:fixed;inset:0;display:block;z-index:10;pointer-events:auto;touch-action:none;cursor:crosshair}
   #stage{position:fixed;inset:0;z-index:0}
   #help{position:fixed;right:16px;bottom:16px;color:#ccc;background:rgba(0,0,0,.45);padding:6px 8px;border-radius:8px;font-size:12px;z-index:5}
@@ -36,7 +36,7 @@
 </head>
 <body>
   <div id="hud">
-    <h3>Oculus/WebXR · 좌/우 개별 블러 + 3모드 (v8)</h3>
+    <h3>Oculus/WebXR · 좌/우 개별 채도 + 3모드 (v9)</h3>
     <div class="row">시드: <span id="seedVal" class="pill">없음</span> · 점 <span id="ptCount" class="pill">0/7</span></div>
 
     <div class="row"><label>팔레트 크기: <span id="palSzVal" class="pill">240</span></label>
@@ -60,14 +60,15 @@
 
     <hr style="border:none;border-top:1px solid rgba(255,255,255,.12);width:100%">
 
-    <div class="row"><label>블러(공통) : <span id="blurVal" class="pill">0%</span></label>
-      <input id="blur" type="range" min="0" max="20" step="1" value="0">
+    <!-- 채도 슬라이더 (기본 100%=원본, 0~250%) -->
+    <div class="row"><label>채도(공통) : <span id="satVal" class="pill">100%</span></label>
+      <input id="sat" type="range" min="0" max="250" step="5" value="100">
     </div>
-    <div class="row"><label>좌안 추가 : <span id="leftBiasVal" class="pill">0%</span></label>
-      <input id="leftBias" type="range" min="0" max="20" step="1" value="0">
+    <div class="row"><label>좌안 추가 : <span id="leftSatVal" class="pill">0%</span></label>
+      <input id="leftSat" type="range" min="-50" max="150" step="5" value="0">
     </div>
-    <div class="row"><label>우안 추가 : <span id="rightBiasVal" class="pill">0%</span></label>
-      <input id="rightBias" type="range" min="0" max="20" step="1" value="0">
+    <div class="row"><label>우안 추가 : <span id="rightSatVal" class="pill">0%</span></label>
+      <input id="rightSat" type="range" min="-50" max="150" step="5" value="0">
     </div>
 
     <div class="row mode">
@@ -77,10 +78,10 @@
     </div>
   </div>
 
-  <div id="dbg">[READY] 7점을 찍어 시드를 만드세요. (클릭/터치/마우스다운 모두 지원)</div>
+  <div id="dbg">[READY] 7점을 찍어 시드를 만드세요. (클릭/터치/마우스다운 지원)</div>
   <canvas id="seedCanvas"></canvas>
   <div id="stage"></div>
-  <div id="help">7점 → 시작 → Enter VR(HTTPS). 좌/우 별도 뷰포트 + 개별 블러.</div>
+  <div id="help">7점 → 시작 또는 바로 Enter VR(HTTPS). VR 입장 시 자동 스폰.</div>
 
   <!-- A. 시드/팔레트/입력 -->
   <script>
@@ -103,18 +104,25 @@
     function mulberry32(a){return function(){let t=a+=0x6D2B79F5;t=Math.imul(t^(t>>>15),t|1);t^=t+Math.imul(t^(t>>>7),t|61);return ((t^(t>>>14))>>>0)/4294967296;};}
     function computeSeed(){ let s=0; state.points.forEach((p,i)=>{ s^=(((p.x|0)+(p.y|0))<<(i%24)); }); return (s>>>0)||0xA5A5A5A5; }
 
-    function buildSeedAndPalette(){
-      state.seed = computeSeed(); $('seedVal').textContent = state.seed;
-      const rng = mulberry32(state.seed); const base = Math.floor(rng()*360);
+    function buildSeedAndPalette(forceRandom=false){
+      if(forceRandom && state.points.length<MAXPTS){
+        // 무점 시 자동 랜덤 시드
+        const rnd = Math.floor(Math.random()*0xffffffff)>>>0;
+        state.seed = rnd;
+      } else {
+        state.seed = computeSeed();
+      }
+      $('seedVal').textContent = state.seed ?? '없음';
+      const rng = mulberry32(state.seed||0xA5A5A5A5); const base = Math.floor(rng()*360);
       const N = Number($('palSz').value); const arr=[];
       for(let i=0;i<N;i++){
         const h=(base+i*(360/N) + (rng()*2-1)*8 + 360)%360;
-        const s=Math.max(0.35, Math.min(0.55, 0.35 + rng()*0.20)); // 채도 낮춤
-        const l=Math.max(0.70, Math.min(0.85, 0.70 + rng()*0.15)); // 밝게
+        const s=clamp(0.45 + rng()*0.15, 0.45, 0.60); // 기본 적당한 채도
+        const l=clamp(0.85 + rng()*0.10, 0.85, 0.95); // 매우 밝게
         arr.push(hslToHex(h,s,l));
       }
       state.palette = arr; $('palCount').textContent = arr.length+"색";
-      say(`[SEED] 밝은 팔레트 ${N}색 생성 (S 0.35~0.55, L 0.70~0.85)`);
+      say(`[SEED] 밝은 팔레트 ${N}색 생성 (S 0.45~0.60, L 0.85~0.95)`);
     }
 
     function draw(){
@@ -150,28 +158,30 @@
     const speedEl=$('speed'), freqEl=$('freq'), densEl=$('dens');
     const speedVal=$('speedVal'), freqVal=$('freqVal'), densVal=$('densVal');
     const palSz=$('palSz'), palSzVal=$('palSzVal');
-    const blurEl=$('blur'), blurVal=$('blurVal');
-    const leftBias=$('leftBias'), leftBiasVal=$('leftBiasVal');
-    const rightBias=$('rightBias'), rightBiasVal=$('rightBiasVal');
+
+    const satEl=$('sat'), leftSat=$('leftSat'), rightSat=$('rightSat');
+    const satVal=$('satVal'), leftSatVal=$('leftSatVal'), rightSatVal=$('rightSatVal');
 
     const modeRadios = Array.from(document.querySelectorAll('input[name="mode"]'));
     const modeVal = ()=> (modeRadios.find(r=>r.checked)?.value||'bias');
 
     function syncUI(){
       speedVal.textContent=speedEl.value; freqVal.textContent=freqEl.value; densVal.textContent=densEl.value;
-      palSzVal.textContent=palSz.value; blurVal.textContent=blurEl.value+"%";
-      leftBiasVal.textContent=leftBias.value+"%"; rightBiasVal.textContent=rightBias.value+"%";
+      palSzVal.textContent=palSz.value;
+      satVal.textContent=satEl.value+"%"; leftSatVal.textContent=leftSat.value+"%"; rightSatVal.textContent=rightSat.value+"%";
+      window.dispatchEvent(new CustomEvent('ui:sat-change')); // 실시간 반영
     }
     ['input','change'].forEach(ev=>{
-      [speedEl,freqEl,densEl,palSz,blurEl,leftBias,rightBias].forEach(el=>el.addEventListener(ev,()=>{
-        syncUI(); if(el===palSz && state.points.length===MAXPTS){ buildSeedAndPalette(); }
+      [speedEl,freqEl,densEl,palSz,satEl,leftSat,rightSat].forEach(el=>el.addEventListener(ev,()=>{
+        if(el===palSz){ if(state.points.length===MAXPTS || state.seed!=null) buildSeedAndPalette(true); }
+        syncUI();
       }));
       modeRadios.forEach(r=>r.addEventListener(ev, syncUI));
     });
     syncUI();
 
     $('startBtn').onclick=()=>{
-      if(state.seed==null){ alert("먼저 7점을 찍으세요."); return; }
+      if(state.seed==null){ buildSeedAndPalette(true); }
       if(!state.running){ state.running=true; say("[RUN] 시작"); can.style.display="none"; window.dispatchEvent(new CustomEvent('app:start')); }
     };
     $('stopBtn').onclick=()=>{ state.running=false; say("[STOP] 중지"); };
@@ -180,22 +190,45 @@
       can.style.display="block"; draw(); say("[RESET] 초기화"); };
 
     window.AppXR = { state, say,
-      ui:{ speedEl,freqEl,densEl, blurEl,leftBias,rightBias, modeVal } };
+      ui:{ speedEl,freqEl,densEl, satEl,leftSat,rightSat, modeVal },
+      util:{ buildSeedAndPalette }
+    };
   })();
   </script>
 
-  <!-- B. XR 렌더/후처리 -->
+  <!-- B. XR 렌더/후처리(채도 전용 Shader) -->
   <script type="module">
   import * as THREE from 'three';
   import { VRButton } from 'three/addons/webxr/VRButton.js';
   import { EffectComposer } from 'three/addons/postprocessing/EffectComposer.js';
   import { RenderPass } from 'three/addons/postprocessing/RenderPass.js';
   import { ShaderPass } from 'three/addons/postprocessing/ShaderPass.js';
-  import { HorizontalBlurShader } from 'three/addons/shaders/HorizontalBlurShader.js';
-  import { VerticalBlurShader } from 'three/addons/shaders/VerticalBlurShader.js';
 
-  const { state, say, ui } = window.AppXR;
-  const { speedEl, freqEl, densEl, blurEl, leftBias, rightBias, modeVal } = ui;
+  // 간단 채도 셰이더
+  const SaturationShader = {
+    uniforms: { tDiffuse: { value: null }, saturation: { value: 1.0 } },
+    vertexShader: /* glsl */`
+      varying vec2 vUv;
+      void main(){ vUv = uv; gl_Position = projectionMatrix * modelViewMatrix * vec4(position,1.0); }
+    `,
+    fragmentShader: /* glsl */`
+      uniform sampler2D tDiffuse;
+      uniform float saturation;
+      varying vec2 vUv;
+      vec3 sat(vec3 c, float s){
+        float luma = dot(c, vec3(0.299, 0.587, 0.114));
+        return mix(vec3(luma), c, s);
+      }
+      void main(){
+        vec4 col = texture2D(tDiffuse, vUv);
+        col.rgb = sat(col.rgb, saturation);
+        gl_FragColor = col;
+      }
+    `
+  };
+
+  const { state, say, ui, util } = window.AppXR;
+  const { speedEl, freqEl, densEl, satEl, leftSat, rightSat, modeVal } = ui;
 
   const stage=document.getElementById('stage');
   const renderer=new THREE.WebGLRenderer({antialias:true});
@@ -203,7 +236,7 @@
   renderer.setSize(innerWidth,innerHeight);
   renderer.outputColorSpace = THREE.SRGBColorSpace;
   renderer.toneMapping = THREE.ACESFilmicToneMapping;
-  renderer.toneMappingExposure = 1.15;
+  renderer.toneMappingExposure = 1.25; // 조금 더 밝게
   renderer.xr.enabled=true;
   renderer.xr.setReferenceSpaceType('local-floor');
   stage.appendChild(renderer.domElement);
@@ -214,9 +247,10 @@
   const baseCam=new THREE.PerspectiveCamera(55,innerWidth/innerHeight,0.1,2000);
   baseCam.position.set(0,1.4,4); scene.add(baseCam);
 
-  const hemi = new THREE.HemisphereLight(0xffffff, 0x222244, 1.0); scene.add(hemi);
-  const dir = new THREE.DirectionalLight(0xffffff, 1.05); dir.position.set(2,4,3); scene.add(dir);
-  const grid = new THREE.GridHelper(20, 20, 0x444444, 0x222222); grid.position.y = -1.5; scene.add(grid);
+  // 더 밝은 조명
+  scene.add(new THREE.AmbientLight(0xffffff, 0.6));
+  const hemi = new THREE.HemisphereLight(0xffffff, 0x222244, 0.9); scene.add(hemi);
+  const dir = new THREE.DirectionalLight(0xffffff, 1.2); dir.position.set(2,4,3); scene.add(dir);
 
   const group=new THREE.Group(); scene.add(group);
   let cubes=[];
@@ -224,33 +258,36 @@
   function colorFromPalette(rng){ return new THREE.Color(state.palette[Math.floor(rng()*state.palette.length)]||"#ffffff"); }
   function mulberry32(a){return function(){let t=a+=0x6D2B79F5;t=Math.imul(t^(t>>>15),t|1);t^=t+Math.imul(t^(t>>>7),t|61);return ((t^(t>>>14))>>>0)/4294967296;};}
 
-  // === "멀리서 -> 나에게" 직선 접근 ===
+  // 정면 접근(멀리서 → 사용자)
   function createBox(rng){
     const sx = 0.25 + rng()*0.75;
     const sy = 0.25 + rng()*0.75;
     const sz = 0.25 + rng()*1.20;
     const g = new THREE.BoxGeometry(sx, sy, sz);
-    const m = new THREE.MeshStandardMaterial({ color: colorFromPalette(rng), metalness:0.05, roughness:0.6, transparent:true, opacity:1 });
+    const col = colorFromPalette(rng);
+    const m = new THREE.MeshStandardMaterial({
+      color: col, metalness: 0.05, roughness: 0.45,
+      transparent: true, opacity: 1.0,
+      emissive: col.clone().multiplyScalar(0.25), emissiveIntensity: 0.6
+    });
     const mesh = new THREE.Mesh(g, m);
 
-    // Z 멀리서 시작, X/Y는 약간 랜덤
-    const zStart = -12 - rng()*6;     // -12 ~ -18
-    const xStart = (rng()-0.5)*2.8;   // 좌우 약간 퍼짐
-    const yStart = (rng()-0.5)*1.8;
+    const zStart = -14 - rng()*6;         // 더 멀리서 시작
+    const xStart = (rng()-0.5)*3.2;
+    const yStart = (rng()-0.5)*2.0;
     mesh.position.set(xStart, yStart, zStart);
     mesh.rotation.set(rng()*Math.PI, rng()*Math.PI, rng()*Math.PI);
 
-    // 수명 동안 zEnd로 접근하도록 속도 설정
     const lifeMs = Number(speedEl.value)*1000;
     const lifeS  = Math.max(lifeMs/1000, 0.5);
-    const zEnd   =  2.6;                         // 카메라 앞까지
-    const velZ   = (zEnd - zStart) / lifeS;      // 초당 z 증가량
-    const velX   = (rng()*0.16 - 0.08);          // 가벼운 좌우 드리프트
-    const swayA  = 0.08 + rng()*0.12;            // Y 미세 흔들림
+    const zEnd   =  2.8;
+    const velZ   = (zEnd - zStart) / lifeS;
+    const velX   = (rng()*0.16 - 0.08);
+    const swayA  = 0.06 + rng()*0.10;     // Y 흔들림 낮춤(춤추는 느낌 최소화)
     const swayHz = 0.5 + rng()*0.6;
 
     mesh.userData = {
-      zStart, zEnd, velZ, velX,
+      zEnd, velZ, velX,
       yBase: yStart, swayA, swayHz, phase: rng()*Math.PI*2,
       dieAt: performance.now() + lifeMs, lifeTotal: lifeMs
     };
@@ -259,28 +296,29 @@
   }
 
   function spawn(now){
-    if(!state.seed || !state.palette.length || !state.running) return;
+    if(!state.palette.length){ return; }
+    if(!state.running) return;
     const base=(state.seed^(now|0))>>>0;
     const rng = mulberry32(base);
     for(let i=0;i<Number(densEl.value);i++) createBox(rng);
   }
   window.addEventListener('app:start', ()=>{ spawn(performance.now()); });
 
-  // per-eye composers
+  // ===== Per-eye composers (채도 전용) =====
   const compL = new EffectComposer(renderer);
   const passL = new RenderPass(scene, baseCam);
-  const hL = new ShaderPass(HorizontalBlurShader), vL = new ShaderPass(VerticalBlurShader); vL.renderToScreen = true;
-  compL.addPass(passL); compL.addPass(hL); compL.addPass(vL);
+  const satPassL = new ShaderPass(SaturationShader); satPassL.renderToScreen = true;
+  compL.addPass(passL); compL.addPass(satPassL);
 
   const compR = new EffectComposer(renderer);
   const passR = new RenderPass(scene, baseCam);
-  const hR = new ShaderPass(HorizontalBlurShader), vR = new ShaderPass(VerticalBlurShader); vR.renderToScreen = true;
-  compR.addPass(passR); compR.addPass(hR); compR.addPass(vR);
+  const satPassR = new ShaderPass(SaturationShader); satPassR.renderToScreen = true;
+  compR.addPass(passR); compR.addPass(satPassR);
 
-  function setBlur(pct, w, h, isLeft){
-    const amt = pct * 0.1;
-    (isLeft?hL:hR).uniforms.h.value = (amt)/(w||1);
-    (isLeft?vL:vR).uniforms.v.value = (amt)/(h||1);
+  function setSaturation(pct, isLeft){
+    // pct: 0~250 → 0.0~2.5 배
+    const f = Math.max(0, pct) / 100;
+    (isLeft ? satPassL : satPassR).uniforms.saturation.value = f;
   }
 
   function renderXRPerEye(){
@@ -291,9 +329,9 @@
     renderer.setScissorTest(true);
 
     const mode = modeVal();
-    const basePct = Number(blurEl.value);
-    const lPct = basePct + Number(leftBias.value);
-    const rPct = basePct + Number(rightBias.value);
+    const basePct = Number(satEl.value);
+    const lPct = basePct + Number(leftSat.value);
+    const rPct = basePct + Number(rightSat.value);
 
     for(let i=0;i<2;i++){
       const sub = xrCam.cameras[i];
@@ -307,7 +345,7 @@
 
       const pct = (mode==='bias') ? (i===0?lPct:rPct) : (mode==='viewL'?lPct:rPct);
       passL.camera = camToUse; passR.camera = camToUse;
-      setBlur(pct, vp.z, vp.w, i===0);
+      setSaturation(pct, i===0);
 
       if(i===0) compL.render(); else { renderer.clearDepth(); compR.render(); }
     }
@@ -316,10 +354,27 @@
 
   function renderMono(){
     const w = renderer.domElement.width, h = renderer.domElement.height;
-    compL.setSize(w,h); setBlur(Number(blurEl.value), w,h, true);
+    compL.setSize(w,h);
+    setSaturation(Number(satEl.value), true);
     passL.camera = baseCam; compL.render();
   }
 
+  // UI에서 채도 변경 시 즉시 반영
+  window.addEventListener('ui:sat-change', ()=>{
+    setSaturation(Number(satEl.value) + Number(leftSat.value), true);
+    setSaturation(Number(satEl.value) + Number(rightSat.value), false);
+  });
+
+  // VR 세션 진입 시 자동 스폰 & 자동 실행
+  renderer.xr.addEventListener('sessionstart', ()=>{
+    if(state.seed==null || !state.palette.length){ util.buildSeedAndPalette(true); }
+    // 시드 캔버스 숨김 + 실행
+    const sc = document.getElementById('seedCanvas'); if(sc) sc.style.display='none';
+    state.running = true;
+    setTimeout(()=>spawn(performance.now()), 50);
+  });
+
+  // 메인 루프
   let prevTime = performance.now(), lastSpawn = 0;
   function loop(now){
     const dt = Math.min((now - prevTime)/1000, 0.05); prevTime = now;
@@ -333,22 +388,17 @@
     for(let i=cubes.length-1;i>=0;i--){
       const m = cubes[i], u = m.userData;
 
-      // 회전: 자연스럽게
       m.rotation.x += 0.6 * dt;
       m.rotation.y += 0.5 * dt;
 
-      // 정면 접근 (Z+) + 약한 좌우 드리프트 + Y 미세 흔들림
       u.phase += dt * 2*Math.PI * u.swayHz;
       m.position.z += u.velZ * dt;
       m.position.x += u.velX * dt;
       m.position.y = u.yBase + Math.sin(u.phase) * u.swayA;
 
-      // 페이드아웃(수명 기반 & zEnd 도달)
-      const lifeLeft = (u.dieAt - t) / u.lifeTotal;
-      let alpha = THREE.MathUtils.clamp(lifeLeft, 0, 1);
+      let alpha = THREE.MathUtils.clamp((u.dieAt - t) / u.lifeTotal, 0, 1);
       if(m.position.z >= u.zEnd){
-        const k = THREE.MathUtils.clamp((m.position.z - u.zEnd)/0.8, 0, 1);
-        alpha *= (1 - k);
+        alpha *= (1 - THREE.MathUtils.clamp((m.position.z - u.zEnd)/0.8, 0, 1));
       }
       m.material.opacity = alpha;
 
@@ -360,7 +410,7 @@
     if(renderer.xr.isPresenting) renderXRPerEye(); else renderMono();
 
     document.getElementById('dbg').textContent =
-      `[${renderer.xr.isPresenting?'XR':'MONO'}] cubes=${cubes.length} mode=${modeVal()} blur=${blurEl.value}% L+=${leftBias.value}% R+=${rightBias.value}%`;
+      `[${renderer.xr.isPresenting?'XR':'MONO'}] cubes=${cubes.length} mode=${modeVal()} sat=${satEl.value}% L+=${leftSat.value}% R+=${rightSat.value}%`;
   }
   renderer.setAnimationLoop(loop);
 
